Closed
Bug 1229926
Opened 10 years ago
Closed 10 years ago
Attempting to start a "browser" (aka tab) share with fake streams gives "OverconstrainedError: Constraints could be not satisfied., line 0"
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: standard8, Assigned: jib)
References
(Depends on 1 open bug)
Details
Attachments
(2 files)
STR:
1) In about:config set the following:
media.navigator.permission.disabled;true
media.navigator.streams.fake;true
2) Visit http://mozilla.github.io/webrtc-landing/gum_test.html
3) Select Start
Expected Results
A display of the browser tab is shown
Actual Results
"OverconstrainedError: Constraints could be not satisfied." is displayed
| Assignee | ||
Comment 1•10 years ago
|
||
Bug 1229926 - don't throw OverConstrainedError(deviceId) on fake devices
Attachment #8695098 -
Flags: review?(rjesup)
| Assignee | ||
Comment 2•10 years ago
|
||
Bug 1229926 - only fake cams and mics.
Attachment #8695099 -
Flags: review?(rjesup)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jib
| Reporter | ||
Comment 3•10 years ago
|
||
I've just given the patches a quick run against our test that was failing, and can confirm they definitely fix that as well. Thanks Jib!
Comment 4•10 years ago
|
||
Comment on attachment 8695098 [details]
MozReview Request: Bug 1229926 - don't throw OverConstrainedError(deviceId) on fake devices
https://reviewboard.mozilla.org/r/27001/#review24507
Attachment #8695098 -
Flags: review?(rjesup) → review+
Comment 5•10 years ago
|
||
Comment on attachment 8695099 [details]
MozReview Request: Bug 1229926 - only fake cams and mics.
https://reviewboard.mozilla.org/r/27003/#review24509
Attachment #8695099 -
Flags: review?(rjesup) → review+
| Assignee | ||
Comment 6•10 years ago
|
||
Green try - https://treeherder.mozilla.org/#/jobs?repo=try&revision=d5ca1c32fc36&selectedJob=14378937
Keywords: checkin-needed
https://hg.mozilla.org/integration/mozilla-inbound/rev/d3ff440af25d
https://hg.mozilla.org/integration/mozilla-inbound/rev/39c9062db9d9
Keywords: checkin-needed
Comment 8•10 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/d3ff440af25d
https://hg.mozilla.org/mozilla-central/rev/39c9062db9d9
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in
before you can comment on or make changes to this bug.
Description
•