Bug 1229926 - don't throw OverConstrainedError(deviceId) on fake devices. r=jesup